--- a/Auto-Part/Auto-Part-WebUI/Views/Shop/Categories.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Views/Shop/Categories.cshtml
@@ -85,7 +85,7 @@
                                     </td>
                                     <td class="product-name">
                                         <div class="product-name-section">
-                                            <a asp-action="details" asp-route-id="@item.Id">@item.Category.Brand.Name</a>
+                                            <a asp-action="details" asp-route-id="@item.Id">@item.Brand.Name</a>
                                         </div>
                                     </td>
                                     <td class="product-name">
