--- a/Auto-Part/Auto-Part-WebUI/Views/Shop/Details.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Views/Shop/Details.cshtml
@@ -29,7 +29,7 @@
                     <h1 class="product-name">@Model.Product.Name</h1>
                     <div class="product-meta">
                         Məhsul Kodu: <b class="product-sku">@Model.Product.MainPartCodeName</b> <br />
-                        Aid Olduğu Maşın Brendi: <b class="product-brand">@Model.Product.Category.Brand.Name</b> <br />
+                        Aid Olduğu Maşın Brendi: <b class="product-brand">@Model.Product.Brand.Name</b> <br />
                         Kateqoriya: <b class="product-brand">@Model.Product.Category.Name</b>
                     </div>
                 </div>
@@ -133,7 +133,7 @@
                                 }
                             </li>
                             <li>Alternativ kodlar: @Model.Product.PartCodeName</li>
-                            <li>Aid Olduğu Maşın Brendi: @Model.Product.Category.Brand.Name</li>
+                            <li>Aid Olduğu Maşın Brendi: @Model.Product.Brand.Name</li>
                             <li>Kateqoriya: @Model.Product.Category.Name</li>
                         </ul>
                     </div>
