--- a/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Products/Details.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Products/Details.cshtml
@@ -47,9 +47,9 @@
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label asp-for="Category.Brand" class="col-sm-2 col-form-label"></label>
+                    <label asp-for="Brand" class="col-sm-2 col-form-label"></label>
                     <div class="col-sm-10">
-                        <p class="form-control">@Model.Category.Brand.Name</p>
+                        <p class="form-control">@Model.Brand.Name</p>
                     </div>
                 </div>
                 <div class="form-group row">
