--- a/Auto-Part/Auto-Part-WebUI/Views/Shop/Index.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Views/Shop/Index.cshtml
@@ -56,6 +56,7 @@
                                 <th><span>Adı</span></th>
                                 <th><span>Marka</span></th>
                                 <th><span>Kateqoriya</span></th>
+                                <th><span>Status</span></th>
                                 <th><span>Qiymət</span></th>
                             </tr>
                         </thead>
@@ -78,13 +79,23 @@
                                     </td>
                                     <td class="product-name">
                                         <div class="product-name-section">
-                                            <a asp-action="details" asp-route-id="@item.Id">@item.Category.Brand.Name</a>
+                                            <a asp-action="details" asp-route-id="@item.Id">@item.Brand.Name</a>
                                         </div>
                                     </td>
                                     <td class="product-name">
                                         <div class="product-name-section">
                                             <a asp-action="details" asp-route-id="@item.Id">@item.Category.Name</a>
                                         </div>
+                                    </td>
+                                    <td>
+                                        @if (item.Quantity > 0)
+                                        {
+                                            <span style="color:#26c;" class="wishlist-in-stock">Anbarda</span>
+                                        }
+                                        else
+                                        {
+                                            <span style="color: #d26e4b;" class="wishlist-out-stock">Anbarda yoxdur</span>
+                                        }
                                     </td>
                                     <td class="product-subtotal">
                                         @foreach (var item1 in Model.Pricings)
@@ -96,6 +107,7 @@
                                         }
 
                                     </td>
+
                                     <td class="d-flex flex-column product-quantity">
                                         <div class="input-group">
                                             <button class="quantity-minus d-icon-minus"></button>
@@ -181,12 +193,12 @@
             let price = $(ev.currentTarget).parent().prev().find('#product-price-type').html();
             console.log(price);
             //let qty = $(ev.currentTarget).closest('#qty').val();
-            if (qty<1) {
+            if (qty < 1) {
                 $('.error').html("Miqdarı düzgün qeyd edin!");
                 return;
             }
             $('.error').html("");
-            addToBasket(data.itemId, price,qty);
+            addToBasket(data.itemId, price, qty);
             console.log(readFromBasket());
             showCardCount();
         }
@@ -199,7 +211,7 @@
         function readFromBasketQty() {
             return ($.cookie('qtys') || '').split(',');
         }
-        function addToBasket(cardId,cardPrice,cardQty) {
+        function addToBasket(cardId, cardPrice, cardQty) {
             let items = readFromBasket();
             let prices = readFromBasketPrices();
             let qtys = readFromBasketQty();
