--- a/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/PopularCars/Details.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/PopularCars/Details.cshtml
@@ -36,10 +36,16 @@
         <div class="card-block">
             <div>
                 <div class="form-group row">
-                    
+                    <label asp-for="Name" class="col-sm-2 col-form-label"></label>
+                    <div class="col-sm-10">
+                        <p class="form-control">@Model.Name</p>
+                    </div>
+                    <label asp-for="ProductIds" class="col-sm-2 col-form-label"></label>
+                    <div class="col-sm-10">
+                        <p class="form-control">@Model.ProductIds</p>
+                    </div>
                 </div>
                 <div class="form-group row">
-                    <label class="col-sm-2"></label>
                     <div class="col-sm-10">
                         <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning btn-icon"><i class="icofont-pencil-alt-5"></i></a> |
                         <a asp-action="Index" class="btn btn-info btn-icon"><i class="icofont-arrow-left"></i></a>
